<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivityMainLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ConstInicioSesion"
        >


        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:background="@color/PrimaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2_Escuerla"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/m_bold"
            android:text="@string/iniciar"
            android:textColor="@color/White"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView_usuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/m_regular"
            android:text="@string/correo"
            android:textColor="@color/PrimaryColorDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextINputLayoutCorreo_reg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/Correo"

            android:maxWidth="1dp"
            android:minWidth="1dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"

            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_usuario"
            app:startIconContentDescription="@string/Correo">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/m_light"
                android:inputType="textWebEmailAddress"
                android:lines="1"
                android:textSize="14sp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_contra_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/m_regular"
            android:text="@string/pass"
            android:textColor="@color/PrimaryColorDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextINputLayoutCorreo_reg"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_contraReg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/contraseña"

            android:maxWidth="1dp"
            android:minWidth="1dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"

            app:boxCornerRadiusTopStart="10dp"
            app:hintTextColor="@color/error"
            app:boxStrokeColor="@color/error"
            app:boxStrokeErrorColor="@color/PrimaryColor"
            app:errorIconTint="@color/PrimaryColor"
            app:counterOverflowTextColor="@color/PrimaryColor"

            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:helperText="@string/CondiPassword"

            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_contra_reg"
            app:startIconContentDescription="@string/Correo">

            <EditText
                android:id="@+id/passLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/m_light"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            app:flow_verticalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_contraReg">

            <Button
                android:id="@+id/Btn_iniciar1"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_iniciar"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/m_regular"
                android:text="@string/o_ingrese_con"
                android:textAlignment="center"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/buttonGoogleIni"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/ic_google"
                android:contentDescription="@string/iniciar"
                tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_registrarse1"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/m_bold"
            android:text="@string/textoBotonRegistro"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botones"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_entrarInvitado1"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/m_bold"
            android:text="@string/IngresaInvitado"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_registrarse1"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
