<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTest">

    <View
        android:id="@+id/view_test"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:background="@color/PrimaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack_test"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/back_white"
        android:contentDescription="regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />


    <TextView
        android:id="@+id/textView2_Escuerla"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/m_bold"
        android:text="@string/TitTest"
        android:textColor="@color/White"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view_test"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/m_light"
        android:text="@string/subTest"
        android:textColor="@color/White"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_Escuerla"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView_NoPregunta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/m_bold"
        android:text="@string/NoPregunta"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_test"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView_Pregunta"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/m_light"
        android:text="@string/DesPregunta"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_NoPregunta"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView_NoPregunta"
        app:layout_constraintTop_toBottomOf="@+id/textView_NoPregunta"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSi_test"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:elevation="50dp"
        android:fontFamily="@font/m_bold"
        android:text="@string/BotonInteresa"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_si"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Pregunta" />

    <Button
        android:id="@+id/btnNo_test"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:elevation="50dp"
        android:fontFamily="@font/m_bold"
        android:text="@string/BotonNoInteresa"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_no"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSi_test"
        app:layout_constraintVertical_bias="0.045" />


</androidx.constraintlayout.widget.ConstraintLayout>