<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutUnvitados"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >

        <TextView
            android:id="@+id/textView2_Escuerla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:fontFamily="@font/m_bold"
            android:text="INGRESAR COMO INVITADO"
            android:textColor="@color/PrimaryColor"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/m_regular"
        android:text="@string/nombre"
        android:textColor="@color/PrimaryColorDark"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextINputLayoutName_Invitado"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/HintNombre"

        android:maxWidth="1dp"
        android:minWidth="1dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"

        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_usuario"
        app:startIconContentDescription="@string/Correo">

        <EditText
            android:id="@+id/name_Invitado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/m_light"
            android:inputType="textWebEmailAddress"
            android:lines="1"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Btn_iniciar_invitado_layout"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btn_iniciar"
        />

</LinearLayout>