<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ActivityRegistro">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:background="@color/PrimaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnWhite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/back_white"
            android:contentDescription="@string/botonregresa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />


        <TextView
            android:id="@+id/textView2_Escuerla"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/m_bold"
            android:text="@string/titRegistro"
            android:textColor="@color/White"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/m_light"
            android:text="@string/TitRegistro2"
            android:textColor="@color/White"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_Escuerla"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView_nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/m_regular"
            android:text="@string/nombre"
            android:textColor="@color/PrimaryColorDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextINputLayoutNombre_reg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/HintNombre"
            android:maxWidth="1dp"
            android:minWidth="1dp"
            app:boxBackgroundMode="outline"

            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_nombre"
            app:startIconContentDescription="@string/HintNombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/m_light"
                android:inputType="text"
                android:lines="1"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_usuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/m_regular"
            android:text="@string/correo"
            android:textColor="@color/PrimaryColorDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextINputLayoutNombre_reg"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextINputLayoutCorreo_reg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/Correo"

            android:maxWidth="1dp"
            android:minWidth="1dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"

            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_usuario"
            app:startIconContentDescription="@string/Correo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/m_light"
                android:inputType="textWebEmailAddress"
                android:textSize="14sp"
                android:lines="1"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_contra_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/m_regular"
            android:text="@string/pass"
            android:textColor="@color/PrimaryColorDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextINputLayoutCorreo_reg"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_contraReg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"

            android:hint="@string/contraseña"
            android:maxWidth="1dp"
            android:minWidth="1dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"

            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_contra_reg"
            app:startIconContentDescription="@string/Correo"

            app:hintTextColor="@color/error"
            app:boxStrokeColor="@color/error"
            app:helperText="@string/CondiPassword"
            app:counterMaxLength="6"
            app:counterEnabled="true"
            app:boxStrokeErrorColor="@color/PrimaryColor"
            app:counterOverflowTextColor="@color/PrimaryColor"
            app:errorIconTint="@color/PrimaryColor"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_reg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/m_light"
                android:inputType="textPassword"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/botonesRwg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            app:flow_verticalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_contraReg">

            <Button
                android:id="@+id/btn_registrarse1"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_registrar" />

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/m_regular"
                android:text="@string/o_registrese_con"
                android:textAlignment="center"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/buttonGoogleReg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/ic_google"
                android:contentDescription="regresar"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_Login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/m_bold"
            android:text="@string/textoBotonIniciar"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botonesRwg"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <!--Button
            android:id="@+id/btn_entrarInvitado1"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:fontFamily="@font/m_bold"
            android:text="@string/IngresaInvitado"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Login"
            app:layout_constraintVertical_bias="0.08"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" /-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
